@@ -1,3 +1,8 @@
+3 April 2017: Wouter
+	- Fix #1217: Add metrics to unbound-control interface showing
+	  crypted, cert request, plaintext and malformed queries (from
+	  Manu Bretelle).
+
 27 March 2017: Wouter
 	- Remove (now unused) event2 include from dnscrypt code.
 
